continuation creation user

--- a/Visualisateur/Visualisateur/Visualisateur.csproj
+++ b/Visualisateur/Visualisateur/Visualisateur.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="User\User.cs" />
     <Compile Include="Windows\CreateWindow.xaml.cs">
       <DependentUpon>CreateWindow.xaml</DependentUpon>
     </Compile>
