--- a/Visualisateur/Visualisateur/packages.config
+++ b/Visualisateur/Visualisateur/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
-  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net461" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.0-alpha0184" targetFramework="net461" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net461" />
+  <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net461" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net461" />
 </packages>
