--- a/Visualisateur/Visualisateur/Visualisateur.csproj
+++ b/Visualisateur/Visualisateur/Visualisateur.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Other\User.cs" />
     <Compile Include="Other\Video.cs" />
     <Compile Include="Other\VideosSee.cs" />
+    <Compile Include="Other\WaitCursor.cs" />
     <Compile Include="Windows\CreateWindow.xaml.cs">
       <DependentUpon>CreateWindow.xaml</DependentUpon>
     </Compile>
