ajout filtres de nom

--- a/Visualisateur/Visualisateur/Visualisateur.csproj
+++ b/Visualisateur/Visualisateur/Visualisateur.csproj
@@ -108,6 +108,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Other\MimeTypes.cs" />
     <Compile Include="Other\User.cs" />
     <Compile Include="Other\Video.cs" />
     <Compile Include="Other\VideosSee.cs" />
