ajout d'un template pour afficher les videos

--- a/Visualisateur/Visualisateur/Visualisateur.csproj
+++ b/Visualisateur/Visualisateur/Visualisateur.csproj
@@ -119,6 +119,9 @@
     <Compile Include="Windows\LibraryWindow.xaml.cs">
       <DependentUpon>LibraryWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\VideoTemplate.xaml.cs">
+      <DependentUpon>VideoTemplate.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -136,6 +139,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\LibraryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\VideoTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
